tests/__snapshots__/validation-expect-assertion-chain-stderr.snap.txt
Error: 'expect()' must be followed by the '.type' modifier.

  2 | 
  3 | test("must be followed by the '.type' modifier", () => {
  4 |   expect();
    |   ~~~~~~~~
  5 | 
  6 |   expect<string>().type.toBe<string>();
  7 | });

      at ./__typetests__/assertion-chain.tst.ts:4:3

Error: The final element in the chain must be a matcher.

   8 | 
   9 | test("the final element must be a matcher", () => {
  10 |   expect().type;
     |   ~~~~~~~~~~~~~
  11 |   expect().type.not;
  12 | 
  13 |   expect<string>().type.toBe<string>();

       at ./__typetests__/assertion-chain.tst.ts:10:3

Error: The final element in the chain must be a matcher.

   9 | test("the final element must be a matcher", () => {
  10 |   expect().type;
  11 |   expect().type.not;
     |   ~~~~~~~~~~~~~~~~~
  12 | 
  13 |   expect<string>().type.toBe<string>();
  14 | });

       at ./__typetests__/assertion-chain.tst.ts:11:3

Error: The matcher must be completed with '()'.

  15 | 
  16 | test("must be completed with '()'", () => {
  17 |   expect().type.toBe;
     |                 ~~~~
  18 |   expect().type.toBe<string>;
  19 |   expect().type.not.toBe;
  20 |   expect().type.not.toBe<string>;

       at ./__typetests__/assertion-chain.tst.ts:17:17

Error: The matcher must be completed with '()'.

  16 | test("must be completed with '()'", () => {
  17 |   expect().type.toBe;
  18 |   expect().type.toBe<string>;
     |                 ~~~~~~~~~~~~
  19 |   expect().type.not.toBe;
  20 |   expect().type.not.toBe<string>;
  21 | 

       at ./__typetests__/assertion-chain.tst.ts:18:17

Error: The matcher must be completed with '()'.

  17 |   expect().type.toBe;
  18 |   expect().type.toBe<string>;
  19 |   expect().type.not.toBe;
     |                     ~~~~
  20 |   expect().type.not.toBe<string>;
  21 | 
  22 |   expect<string>().type.toBe<string>();

       at ./__typetests__/assertion-chain.tst.ts:19:21

Error: The matcher must be completed with '()'.

  18 |   expect().type.toBe<string>;
  19 |   expect().type.not.toBe;
  20 |   expect().type.not.toBe<string>;
     |                     ~~~~~~~~~~~~
  21 | 
  22 |   expect<string>().type.toBe<string>();
  23 | });

       at ./__typetests__/assertion-chain.tst.ts:20:21

